# CASE-Implementation-PyPI-Exifread

./: .gitignore  CONTRIBUTE.md  README.md  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: python-package.yml
exifread_case/: compact.py  exifread_case.py  input.json
exifread_case/.local_ignore/: test.py  testing3.py  testing4.py
exifread_output_examples/: exifread_case_799987.json  exifread_case_799987.old
