[metadata]
name = CASE-Implementation-PyPI-Exifread
version = 0.1.0
author = Robert dowdall
author_email = dowdallr@ucd.ie
description = Case Implementation of some exifread functionality
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/casework/CASE-Implementation-PyPI-Exifread
classifiers =
    Development Status :: 4 - Beta
    License :: Public Domain
    Operating System :: Linux Based
    Programming Language :: Python :: 3

[options]
install_requires =
    exifread
    rdflib
    rdflib_jsonld
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    exifread2case = exifread_case.exifread_case:main


