[metadata]
name = CASE-Implementation-PyPI-Exifread
version = attr: exifread_case.__version__
author = Robert Dowdall
author_email = dowdallr@ucd.ie
description = Case Implementation of some exifread functionality
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/casework/CASE-Implementation-PyPI-Exifread
classifiers =
    Development Status :: 4 - Beta
    License :: Public Domain
    Operating System :: Linux Based
    Programming Language :: Python :: 3

[options]
install_requires =
    exifread
    case_utils >= 0.13.0, < 0.14.0
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    exifread2case = exifread_case.exifread_case:main
